# E2E-ML-healthfood-pred

./: .gitignore  README.md  pyproject.toml
data/: cleaned_data.parquet  final_data.parquet
notebooks/: eda.ipynb  logistic_regression.ipynb
src/: ingestion.py  json_parsing.py  model_training.py  predict.py  processing.py
