[project]
name = "food-api-project-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.3",
    "mlflow>=3.11.1",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "typing>=3.10.0.0",
]

[tool.uv.workspace]
members = [
    "ml_model.py",
]
